--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "test:unit": "vue-cli-service test:unit",
     "lint": "vue-cli-service lint",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "chromatic": "npx chromatic"
   },
   "dependencies": {
     "core-js": "^3.8.1",
@@ -41,6 +42,7 @@
     "@vue/test-utils": "^1.0.3",
     "autoprefixer": "^9.8.6",
     "babel-loader": "^8.2.2",
+    "chromatic": "^5.5.0",
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-vue": "^6.2.2",
