--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "lint": "vue-cli-service lint",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
+    "build-storybook-docs": "build-storybook --docs -s public",
     "chromatic": "npx chromatic"
   },
   "dependencies": {
