--- a/.github/workflows/chromatic.yml
+++ b/.github/workflows/chromatic.yml
@@ -7,21 +7,18 @@ on: push
 # List of jobs
 jobs:
   chromatic-deployment:
-    # Operating System
     runs-on: ubuntu-latest
     steps:
-      # 👇 Version 2 of the action
       - name: Checkout repository
         uses: actions/checkout@v2
         with:
-          fetch-depth: 0 # 👈 Required to retrieve git history
+          fetch-depth: 0
       - name: Install dependencies
         run: yarn
-        # 👇 Adds Chromatic as a step in the workflow
+      - name: Unit Tests
+        run: yarn test:unit
       - name: Publish to Chromatic
         uses: chromaui/action@v1
-        # Options required to the GitHub Chromatic Action
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-          # 👇 Chromatic projectToken, refer to the manage page to obtain it.
           projectToken: ${{ secrets.CHROMATIC_PROJECT_TOKEN }}
